--- a/1_33/requirements.txt
+++ b/1_33/requirements.txt
@@ -107,7 +107,7 @@ uri-template==1.3.0
 urllib3==2.5.0
 validators==0.35.0
 wcwidth==0.2.13
-weaviate-client @ git+https://github.com/weaviate/weaviate-python-client@7b613fc77dce959e60eb9d8d8de35e63a537186e
+weaviate-client==4.17.0-rc0
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
